@@ -898,8 +898,8 @@ class SCF(object):
 
         log.timer(self, 'SCF', *cput0)
         self.dump_energy(self.hf_energy, self.converged)
-        if self.verbose >= logger.INFO:
-            self.analyze(self.verbose)
+        #if self.verbose >= logger.INFO:
+        #    self.analyze(self.verbose)
         return self.hf_energy
 
     def get_jk(self, mol=None, dm=None, hermi=1):
