@@ -19,6 +19,8 @@ Version 0.10 (2015-1-?):
   - Remove the first argument (Mole object) in CASSCF/CASCI class initialization
   - Change the return value ordering of function scf.hf.kernel
   - Set default value for the arguments of most class functions
+* Removing the default calling of analyze() in kernel functions
+* Fix screening bug in ao2mo.outcore for long-range separated molecule
 
 Version 0.9 (2015-1-4):
 * Add 2-step FCIQMC-CASSCF, using NECI as FCI solver
